hphp/hack/test/typecheck/expression_trees/splice_err1.php.exp
File "splice_err1.php", line 9, characters 13-17:
Typing error (Typing[4110])
  File "splice_err1.php", line 9, characters 13-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_err1.php", line 6, characters 8-8:
  But got `int`
File "splice_err1.php", line 9, characters 15-16:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 170, characters 5-35:
  Expected `Spliceable<Code, mixed, [unresolved]>`
  File "splice_err1.php", line 6, characters 8-8:
  But got `int`
