hphp/hack/test/typecheck/expression_trees/splice_err1.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  $x = 4;

  // Spliced Expressions need to be ExprTrees
  $y = Code`${$x}`;
}
